# webgl-diceroller

./: .gitignore  AGENTS.md  Makefile  README.md  claude.md  deploy.py  deploy_old.py  dev_log.txt  dice_roller.html  index.html  package-lock.json  package.json  patch_horseshoe.js  plan.md  test_cauldron.js  test_debug.js  test_flute.js  test_lamp.js  test_playingcards.js  tsconfig.json  vite.config.js  weekly_plan.md
.playwright-mcp/: page-2026-04-06T08-09-47-744Z.yml  page-2026-04-06T08-11-37-722Z.yml  page-2026-04-06T08-19-04-742Z.yml
docs/: WASM_ENGINE.md
js/: CubicVR.js  d1c3.c  fromHTML.js
legacy/: Makefile
legacy/js/: CubicVR.js  (+2 more)
public/: test-wasm-standalone.html
scripts/: bundle-budgets.json  check-bundle-size.mjs  compare-render-baseline.mjs  compare-solver-wasm.mjs  convert-dice-to-glb.mjs  convert-props-to-glb.mjs  convert-props.mjs  convert-textures-to-ktx2.mjs  extract-hulls-playwright.mjs  extract-hulls-server.mjs  extract-hulls.mjs  generate-pwa-icons.mjs  prop-asset-audit.json  prop-asset-manifest.mjs  render-regression.mjs  verify-bundle-loading.mjs  verify-godray-material.mjs  verify-godrays.mjs  verify-production-isolation.mjs  verify-pwa-isolation.mjs  verify-renderer-factory.mjs  verify-wasm-primitives.mjs  verify-worker-physics.mjs  verify-worker-replay.mjs
src/: dice.js  global.d.ts  interaction.js  main.js  physics.js  results.js  ui.js
src/wasm/: CMakeLists.txt  PhysicsBridge.js  WasmPhysicsBridge.js  WorkerPhysicsBridge.js  build.sh  build_colab.sh  build_solver_test.sh  dice_physics.cpp  dice_physics.worker.js  dice_physics_engine.hpp  physicsFlags.js  physicsTypes.d.ts  seededThrowParams.js  solver_tests.cpp  workerCommands.js  workerLayout.js
tests/: a11y.js  breadloaf.js  cauldron.js  debug.js  flute.js  lamp.js  mobile-touch.js  notation.test.mjs  playingcards.js  share-roll-replay.js  share-roll.test.mjs
(+183 files in other folders)
